fix resizable dialog overflow

--- a/packages/itwinui-css/src/dialog/dialog.scss
+++ b/packages/itwinui-css/src/dialog/dialog.scss
@@ -31,6 +31,7 @@ $iui-dialogue-resizable-min-height: 7.75rem; // 7.75rem = 124px = title bar heig
   padding: var(--iui-size-s) var(--iui-size-m);
   pointer-events: auto;
   background-color: var(--iui-color-background);
+  overflow: hidden;
   @media (forced-colors: active) {
     border: 1px solid;
   }
